--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <title>photo gallery</title>
 </head>
 <body>
-    <div id="pitures" class="pitures"></div>
+    
+    <div id="pitures" class="pitures">
+    </div>
     <div id="bigShow"></div>
+    <img src="./tech ed bootcamp/supper bat.jpg" alt="Human">
+    <img src="./tech ed bootcamp/building.jpg" alt="Village">
+    <img src="./tech ed bootcamp/hill.jpg" alt="Mountain">
+    <img src="./tech ed bootcamp/lego.jpg" alt="Floor">
 </body>
 </html>
