--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     
-    <div id="pitures" class="pitures">
+    <div id="pitures" class="photo">
     </div>
-    <div id="bigShow"></div>
-    <img src="./tech ed bootcamp/supper bat.jpg" alt="Human">
-    <img src="./tech ed bootcamp/building.jpg" alt="Village">
-    <img src="./tech ed bootcamp/hill.jpg" alt="Mountain">
-    <img src="./tech ed bootcamp/lego.jpg" alt="Floor">
+    <div class="bigShow-container" id="bigShow"></div>
+    <div class= "buttons">
+        <button id= "leftBtn" aria-label="last image">&lt;</button>
+        <button id= "rightBtn" aria-label="upcoming image">></button>   
+     </div>
 </body>
 </html>
